CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (LogReader)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (SOURCES
        ${SRC_DIR}/main.cpp)

INCLUDE_DIRECTORIES (${INCLUDE_DIR})

SET (CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /Os /Oy /Gy /GS- /GR- /DNDEBUG /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")
SET (CMAKE_CXX_FLAGS_DEBUG "/MT /O2 /Ob2 /Os /Oy /Gy /GS- /GR- /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")
SET (CMAKE_CXX_FLAGS "/MT /O2 /Ob2 /Os /Oy /Gy /GS- /DNDEBUG /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")

IF (WIN32)
    IF (CMAKE_CL_64)
        SET (WINDOWS_VERSION "5.02")
    ELSE ()
        SET (WINDOWS_VERSION "5.01")
    ENDIF ()
ENDIF ()


ADD_EXECUTABLE (LogReader ${SOURCES} ${HEADERS})
SET_TARGET_PROPERTIES (LogReader PROPERTIES LINK_FLAGS "/OPT:REF /INCREMENTAL:NO /SUBSYSTEM:CONSOLE,${WINDOWS_VERSION}")
SET_TARGET_PROPERTIES (LogReader PROPERTIES COMPILE_FLAGS "/EHs-c-")

ENABLE_TESTING ()
ADD_SUBDIRECTORY (tests)
