CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (LogReader)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (SOURCES
        ${SRC_DIR}/main.cpp
        ${SRC_DIR}/CLogReader.cpp
        ${SRC_DIR}/LogFileViewImpl.cpp)
SET (HEADERS
        ${INCLUDE_DIR}/CLogReader.h
        ${INCLUDE_DIR}/LogFileViewImpl.h)

INCLUDE_DIRECTORIES (${INCLUDE_DIR})

IF (WIN32)
    IF (CMAKE_CL_64)
        SET (WINDOWS_VERSION "5.02")
    ELSE ()
        SET (WINDOWS_VERSION "5.01")
    ENDIF ()
ENDIF ()


ADD_EXECUTABLE (LogReader ${SOURCES} ${HEADERS})

IF (WIN32)
    SET_TARGET_PROPERTIES (LogReader PROPERTIES LINK_FLAGS "/OPT:REF /INCREMENTAL:NO /SUBSYSTEM:CONSOLE,${WINDOWS_VERSION}")
    SET_TARGET_PROPERTIES (LogReader PROPERTIES COMPILE_FLAGS "/EHs-c-")
ENDIF (WIN32)

ENABLE_TESTING ()
ADD_SUBDIRECTORY (tests)
