CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (tests)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
SET (SOURCES
        tests.cpp)

INCLUDE_DIRECTORIES (. ${INCLUDE_DIR}/)

ADD_DEFINITIONS (-D_VARIADIC_MAX=10)

ADD_EXECUTABLE (tests ${SOURCES})
SET_TARGET_PROPERTIES (tests PROPERTIES COMPILE_FLAGS "/EHsc")

ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/googletest/)

TARGET_LINK_LIBRARIES (tests gtest)

ADD_TEST (LogReaderTest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
